# Style-Transfer-cpp

./: .clang-format  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.cpp
src/style-transfer/: CMakeLists.txt  StyleTransfer.cpp  StyleTransfer.hpp  StyleTransferFactory.cpp  StyleTransferFactory.hpp
